Fix form spacing

--- a/components/FieldRow.module.css
+++ b/components/FieldRow.module.css
@@ -1,7 +1,8 @@
 .row {
-  margin-bottom: 1em;
+  margin-bottom: 1.5em;
 }
 
 .label {
-  margin-bottom: 1em;
+  display: block;
+  margin-bottom: 0.5em;
 }
